Issue #1972142 by tmsimont: fixing invisible checkboxes in IE10

--- a/scss/shiny.scss
+++ b/scss/shiny.scss
@@ -659,3 +659,12 @@ html.js input.throbbing {
 #user-filter-form #edit-actions {
   background: transparent;
 }
+input.vbo-table-select-all,
+input.vbo-select,
+td.checkbox input.form-checkbox {
+  border: 0;
+  opacity: 1;
+  height: 20px;
+  width: 20px;
+  background: transparent url("../images/toggles.png") no-repeat 0 0;
+}
